--- a/app/imports.html
+++ b/app/imports.html
@@ -1,5 +1,5 @@
 <!-- Libraries -->
-<link rel="import" href="/bower_components/polymer/polymer.html">
+<!-- <link rel="import" href="/bower_components/polymer/polymer.html"> -->
 
 <!-- Styles -->
 <!-- <link rel="stylesheet" href="/styles/fonts.css"> -->
@@ -12,7 +12,6 @@
 <script src="/scripts/deck.js"></script>
 
 <!-- Elements -->
-<link rel="import" href="/elements/demo/demo.html">
 <link rel="import" href="/elements/bridge-hand/bridge-hand.html">
 <link rel="import" href="/elements/playing-card/playing-card.html">
 <link rel="import" href="/elements/card-tag/card-tag.html">
