--- a/app/index.html
+++ b/app/index.html
@@ -6,17 +6,22 @@
     <link rel="import" href="imports.html">
   </head>
   <body>
-    <div id="playing-field">
-      <div class="top-row">
-        <bridge-hand id="partner-hand"></bridge-hand>
+    <div id="game-table">
+      <div id="playing-field">
+        <div id="table-left">
+          <bridge-hand id="opponent-left-hand" class="rotate90"></bridge-hand>
+        </div>
+        <div id="table-center">
+          <bridge-hand id="partner-hand"></bridge-hand>
+          <trick-field></trick-field>
+          <bridge-hand id="your-hand"></bridge-hand>
+        </div>
+        <div id="table-right">
+          <bridge-hand id="opponent-right-hand" class="rotate90"></bridge-hand>
+        </div>
       </div>
-      <div class="center-row">
-        <bridge-hand id="opponent-left-hand" class="rotate90"></bridge-hand>
-        <trick-field></trick-field>
-        <bridge-hand id="opponent-right-hand" class="rotate90"></bridge-hand>
-      </div>
-      <div class="bottom-row">
-        <bridge-hand id="your-hand"></bridge-hand>
+      <div id="info-bar">
+
       </div>
     </div>
   </body>
