Tweak colors and add info-bar.

--- a/app/imports.html
+++ b/app/imports.html
@@ -12,6 +12,7 @@
 <script src="/scripts/deck.js"></script>
 
 <!-- Elements -->
+<link rel="import" href="/elements/info-bar/info-bar.html">
 <link rel="import" href="/elements/trick-field/trick-field.html">
 <link rel="import" href="/elements/bridge-hand/bridge-hand.html">
 <link rel="import" href="/elements/playing-card/playing-card.html">
