--- a/app/index.html
+++ b/app/index.html
@@ -20,9 +20,9 @@
           <bridge-hand id="opponent-right-hand" class="rotate90"></bridge-hand>
         </div>
       </div>
-      <div id="info-bar">
+      <info-bar>
 
-      </div>
+      </info-bar>
     </div>
   </body>
 </html>
