Update styles for info bar. Add bidding-tray.

--- a/app/imports.html
+++ b/app/imports.html
@@ -18,3 +18,5 @@
 <link rel="import" href="/elements/playing-card/playing-card.html">
 <link rel="import" href="/elements/card-tag/card-tag.html">
 <link rel="import" href="/elements/card-center/card-center.html">
+<link rel="import" href="/elements/trump-display/trump-display.html">
+<link rel="import" href="/elements/bidding-tray/bidding-tray.html">
