--- a/app/index.html
+++ b/app/index.html
@@ -20,9 +20,7 @@
           <bridge-hand id="opponent-right-hand" class="rotate90"></bridge-hand>
         </div>
       </div>
-      <info-bar>
-
-      </info-bar>
+      <info-bar></info-bar>
     </div>
   </body>
 </html>
