--- a/app/elements/info-bar/info-bar.html
+++ b/app/elements/info-bar/info-bar.html
@@ -2,6 +2,8 @@
   <div class="vertical-divider"></div>
   <div class="content">
     <h1>Bridge</h1>
+    <trump-display></trump-display>
+    <bidding-tray></bidding-tray>
   </div>
 </template>
 
