Add event bus and click listeners for bidding tray.

--- a/app/imports.html
+++ b/app/imports.html
@@ -8,6 +8,7 @@
 <!-- Scripts -->
 <script src="/scripts/d3.min.js"></script>
 <script src="/scripts/main.js"></script>
+<script src="/scripts/event_bus.js"></script>
 <script src="/scripts/enum.js"></script>
 <script src="/scripts/deck.js"></script>
 
